--- a/src/index.css
+++ b/src/index.css
@@ -264,6 +264,10 @@ input.btn {
     display: none;
 }
 
+.text-right {
+    text-align: right;
+}
+
 input[type="text"], input[type="search"] {
     outline: none;
     border-radius: 4px;
