--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/*
+Some general rules to lay out a standard for our project for proper responsiveness and clean/simple interface
+ */
 html,
 body {
     height: 100%;
