Fix buttons colliding on super small screens

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@ ul.list li.image-item p {
     font-size: 14px;
 }
 
+.margin-top-5 {
+    margin-top: 5px;
+}
+
 /*
 CSS rules for our filter select input
  */
